--- a/source/_posts/前端知识/es6/ES6_01.md
+++ b/source/_posts/前端知识/es6/ES6_01.md
@@ -1,11 +1,12 @@
 ---
 title: ES6基础 01
+tags:
+  - ES6
+categories:
+  - 前端知识
+abbrlink: 482a66cc
 date: 2022-02-21 11:10:45
 updated:
-tags:
-    - ES6
-categories:
-    - 前端知识
 keywords:
 description:
 top_img:
