--- a/source/_posts/前端知识/es6/ES6_04.md
+++ b/source/_posts/前端知识/es6/ES6_04.md
@@ -1,11 +1,12 @@
 ---
 title: ES6基础 04
+tags:
+  - ES6
+categories:
+  - 前端知识
+abbrlink: '38409243'
 date: 2022-02-21 11:11:18
 updated:
-tags:
-    - ES6
-categories:
-    - 前端知识
 keywords:
 description:
 top_img:
