--- a/source/_posts/前端知识/skill/滚动条抖动.md
+++ b/source/_posts/前端知识/skill/滚动条抖动.md
@@ -1,12 +1,13 @@
 ---
 title: 全局滚动条显隐抖动问题
+tags:
+  - css
+  - vue
+categories:
+  - 前端知识
+abbrlink: 39d3387a
 date: 2022-12-06 18:00:36
 updated:
-tags:
-    - css
-    - vue
-categories:
-    - 前端知识
 keywords:
 description:
 swiper_index:
