--- a/source/_posts/生活/life/没有生活.md
+++ b/source/_posts/生活/life/没有生活.md
@@ -1,11 +1,12 @@
 ---
 title: 没有生活
+tags:
+  - 杂言帐
+categories:
+  - 生活
+abbrlink: a1cc686
 date: 2022-12-18 19:46:53
 updated:
-tags:
-    - 杂言帐
-categories:
-    - 生活
 keywords:
 description:
 swiper_index:
