--- a/source/_posts/前端知识/es6/ES6_02.md
+++ b/source/_posts/前端知识/es6/ES6_02.md
@@ -1,11 +1,12 @@
 ---
 title: ES6基础 02
+tags:
+  - ES6
+categories:
+  - 前端知识
+abbrlink: d1233776
 date: 2022-02-21 11:11:06
 updated:
-tags:
-    - ES6
-categories:
-    - 前端知识
 keywords:
 description:
 top_img:
