--- a/source/_posts/前端知识/es6/ES6_03.md
+++ b/source/_posts/前端知识/es6/ES6_03.md
@@ -1,11 +1,12 @@
 ---
 title: ES6基础 03
+tags:
+  - ES6
+categories:
+  - 前端知识
+abbrlink: a62407e0
 date: 2022-02-21 11:11:12
 updated:
-tags:
-    - ES6
-categories:
-    - 前端知识
 keywords:
 description:
 top_img:
