--- a/source/_posts/电子杂物/ele-waste/电子杂物分类测试文章.md
+++ b/source/_posts/电子杂物/ele-waste/电子杂物分类测试文章.md
@@ -1,11 +1,12 @@
 ---
 title: 电子杂物分类测试文章
+tags:
+  - windows
+categories:
+  - 电子杂物
+abbrlink: f402307
 date: 2022-12-18 19:54:40
 updated:
-tags:
-    - windows
-categories:
-    - 电子杂物
 keywords:
 description:
 swiper_index:
