接下来改移动端显示效果

--- a/source/_posts/生活/life/没有生活.md
+++ b/source/_posts/生活/life/没有生活.md
@@ -1,9 +1,9 @@
 ---
-title: 没有生活
+title: 生活分类文章测试
 tags:
   - 杂言帐
 categories:
-  - 生活
+  - 生活账本
 abbrlink: a1cc686
 date: 2022-12-18 19:46:53
 updated:
