--- a/source/_posts/电子杂物/ele-waste/电子杂物分类测试文章.md
+++ b/source/_posts/电子杂物/ele-waste/电子杂物分类测试文章.md
@@ -8,11 +8,13 @@ abbrlink: f402307
 date: 2022-12-18 19:54:40
 updated:
 keywords:
-description: 为什么不显示呢
+description: 
+  这是一条描述内容
 swiper_index:
 top_img:
 comments:
-cover:
+cover: https://img.recreyed.tk/7e3a2422-07f6-42f7-bf29-1b91e306e63d.webp
+
 toc:
 toc_number:
 toc_style_simple:
