--- a/source/_posts/代码/javaScript/ES6_03.md
+++ b/source/_posts/代码/javaScript/ES6_03.md
@@ -142,40 +142,34 @@ console.log(s.size);//3
 
 ### 3.3 方法
 
-1. add方法
 
-用来向一个 `Set` 对象的末尾添加一个指定的值；可以链式调用；
-
+- add方法
 ```javascript
+// 用来向一个 `Set` 对象的末尾添加一个指定的值；可以链式调用；
 mySet.add('abc');
 console.log(mySet);//Set(4) {1, 2, 3, "abc"}
 ```
+- clear方法  
+   用来清空一个 `Set` 对象中的所有元素；`mySet.clear();`
 
-2. clear方法
+- delete方法  
+  可以从一个 `Set` 对象中删除指定的元素；`mySet.delete(value);`
 
-用来清空一个 `Set` 对象中的所有元素；`mySet.clear();`
+- has方法  
+  返回一个布尔值来指示对应的值value是否存在Set对象中；`mySet.has(value);`
 
-3. delete方法
+- entries、keys、values方法  
+  entries：返回一个新的迭代器对象 ，这个对象的元素是类似 [value, value] 形式的数组  
 
-可以从一个 `Set` 对象中删除指定的元素；`mySet.delete(value);`
+  由于set对象不像Map对象那样拥有 key，然而，为了与 Map 对象的 API 形式保持一致；所以set的key和value是相同的值  
+  
+  keys/values：返回一个新的迭代器对象，该对象包含`Set`对象中的按插入顺序排列的所有元素的值
 
-4. has方法
-
-返回一个布尔值来指示对应的值value是否存在Set对象中；`mySet.has(value);`
-
-5. entries、keys、values方法
-
-entries：返回一个新的迭代器对象 ，这个对象的元素是类似 [value, value] 形式的数组
-
-由于set对象不像Map对象那样拥有 key，然而，为了与 Map 对象的 API 形式保持一致；所以set的key和value是相同的值
-
-keys/values：返回一个新的迭代器对象，该对象包含`Set`对象中的按插入顺序排列的所有元素的值
-
-```javascript
-let mySet = new Set([1, 2, 3]);
-mySet.add('abc')
-console.log(mySet.entries());//SetIterator {1 => 1, 2 => 2, 3 => 3, "abc" => "abc"}
-```
+  ```javascript
+  let mySet = new Set([1, 2, 3]);
+  mySet.add('abc')
+  console.log(mySet.entries());//SetIterator {1 => 1, 2 => 2, 3 => 3, "abc" => "abc"}
+  ```
 
 ## 4. Map和WeakMap用法
 
@@ -190,49 +184,37 @@ console.log(map1.size);
 
 ### 4.2 方法
 
-1. get方法：返回键对应的值，如果不存在，则返回undefined
+1. `map1.get(key)`返回键对应的值，如果不存在，则返回undefined
 
-`map1.get(key)`
+2. `map1.set(key, value)`添加或更新一个指定键和值。返回该Map对象
 
-2. set方法：添加或更新一个指定键和值。返回该Map对象
+3. `map1.delete(key)`移除map对象中指定的元素；如果 `Map` 对象中存在该元素，则移除它并返回 `true`；否则如果该元素不存在则返回 `false`
 
-`map1.set(key, value)`
+4. `map1.clear()`移除Map对象的所有键值对；返回undifined
 
-3. delete方法：移除map对象中指定的元素；如果 `Map` 对象中存在该元素，则移除它并返回 `true`；否则如果该元素不存在则返回 `false`
+5. `map1.has(key)`表示Map实例是否包含键对应的值，返回一个布尔值
 
-`map1.delete(key)`
+6. entries、keys、values方法  
+   entries：返回一个新的包含 `[key, value]` 对的 `Iterator` 对象，返回的迭代器的迭代顺序与 `Map` 对象的插入顺序相同  
+   
+   keys：返回一个新的 `Iterator` 对象。它包含按照顺序插入 `Map` 对象中每个元素的key值  
+   
+   values：返回一个新的Iterator对象。它包含按顺序插入Map对象中每个元素的value值
 
-4. clear方法：移除Map对象的所有键值对；返回undifined
-
-`map1.clear()`
-
-5. has方法：表示Map实例是否包含键对应的值，返回一个布尔值，
-
-`map1.has(key)`
-
-6. entries、keys、values方法
-
-entries：返回一个新的包含 `[key, value]` 对的 `Iterator` 对象，返回的迭代器的迭代顺序与 `Map` 对象的插入顺序相同
-
-keys：返回一个新的 `Iterator` 对象。它包含按照顺序插入 `Map` 对象中每个元素的key值
-
-values：返回一个新的Iterator对象。它包含按顺序插入Map对象中每个元素的value值
-
-```javascript
-let map2 = new Map();
-map1.set('0', 'foo');
-map1.set(1, 'bar');
-let iterator1 = map1.entries();
-let iterator2 = map1.keys();
-let iterator3 = map1.values();
-console.log(iterator1.next().value);// ["0", "foo"]
-console.log(iterator1.next().value);// [1, "bar"]
-console.log(iterator2.next().value);// "0"
-console.log(iterator2.next().value);// 1
-console.log(iterator3.next().value);// "foo"
-console.log(iterator3.next().value);// "bar"
-```
-
+    ```javascript
+    let map2 = new Map();
+    map1.set('0', 'foo');
+    map1.set(1, 'bar');
+    let iterator1 = map1.entries();
+    let iterator2 = map1.keys();
+    let iterator3 = map1.values();
+    console.log(iterator1.next().value);// ["0", "foo"]
+    console.log(iterator1.next().value);// [1, "bar"]
+    console.log(iterator2.next().value);// "0"
+    console.log(iterator2.next().value);// 1
+    console.log(iterator3.next().value);// "foo"
+    console.log(iterator3.next().value);// "bar"
+    ```
 7. map可以使用forEach遍历
 
 
