修改首页样式，去掉description

--- a/source/_posts/代码/skill/顺序异步与并行异步.md
+++ b/source/_posts/代码/skill/顺序异步与并行异步.md
@@ -4,7 +4,7 @@ tags:
   - javaScript
 categories:
   - 代码
-description: 关于异步请求的一些逻辑处理记录
+description:
 cover:
 abbrlink: 95baf4d4
 date: 2023-04-20 17:38:21
