docs: 修改文章标签和标题字体

--- a/source/_posts/代码/前端基础/ES6_02.md
+++ b/source/_posts/代码/前端基础/ES6_02.md
@@ -1,7 +1,7 @@
 ---
-title: ES6基础 02
+title: es6基础 02
 tags:
-  - ES6
+  - es6
 categories:
   - 代码
 abbrlink: d1233776
@@ -11,7 +11,7 @@ keywords:
 description:
 cover:
 ---
-## 1. ES6-Number
+## 1. es6-Number
 
 ### 1.1 Number函数
 
@@ -33,11 +33,11 @@ cover:
 
 `Math.sign(3);`返回1；判断数值正负；正数返回1、复数返回-1、0返回0
 
-## 2. ES6-Object
+## 2. es6-Object
 
 ### 2.1 新写法
 
-ES6允许在对象字面量中直接写入变量和函数，作为对象的属性和方法。此时，属性名就是变量名，属性的值就是变量的值。
+es6允许在对象字面量中直接写入变量和函数，作为对象的属性和方法。此时，属性名就是变量名，属性的值就是变量的值。
 
 ```javascript
 let name = 'zs';
@@ -91,7 +91,7 @@ console.log(Object.values(person2));
 //["zs", 19]
 ```
 
-## 3. ES6-function
+## 3. es6-function
 
 ### 3.1 rest参数（剩余参数）
 
