--- a/source/_posts/代码/前端基础/ES6_01.md
+++ b/source/_posts/代码/前端基础/ES6_01.md
@@ -1,7 +1,7 @@
 ---
-title: ES6基础 01
+title: es6基础 01
 tags:
-  - ES6
+  - es6
 categories:
   - 代码
 abbrlink: 482a66cc
@@ -117,7 +117,7 @@ var a, b, c;
 var { d: { e } } = { "parent": { "child": 1 } }
 ```
 
-## 3. ES6-String
+## 3. es6-String
 
 ### 3.1 模板字符串
 
@@ -189,7 +189,7 @@ let str= '12';
 str.padStart(3,0);//012
 ```
 
-## 4. ES6-Array
+## 4. es6-Array
 
 ### 4.1 新的函数
 
