chore: 最近评论错误提示

--- a/themes/butterfly/languages/zh-CN.yml
+++ b/themes/butterfly/languages/zh-CN.yml
@@ -75,7 +75,7 @@ aside:
   card_newest_comments:
     headline: 最新评论
     loading_text: 加载中...
-    error: 无法获取评论，请确认相关配置是否正确
+    error: 您当前网络不支持ipv6,请切换评论区进行评论
     zero: 暂无评论
     image: 图片
     link: 链接
