--- a/source/_posts/杂记/acg/转载 - 伊理户结女：日本动画字幕组&压制组异闻录.md
+++ b/source/_posts/杂记/acg/转载 - 伊理户结女：日本动画字幕组&压制组异闻录.md
@@ -279,13 +279,13 @@ P.S. 据万能的 MIR 所言，补充几点：DJATOM 应该是乌克兰人。ton
 > 
 > Elysium  
 > 卧草泥马勒戈壁  
-> >> 看这里看这里看这里，在 Elysium 字幕组，我们非常自豪地提供各个方面的最佳产品  
-> >> 当然通常情况下，小体积意味着低质量。但是，在我们这里，一切皆有可能  
-> 放你丫的 P  
-> 你懂的，我不会再说“都 2011 念了谁还在乎文件大小啊”。但是真的，如果你在乎做甚鸟 1080P？做同样大小的 720P 吧，它怎么都比你那坨 1080P 看着舒服  
-> 例如——刀语最后几话（4/5），我啥 deband 滤镜都没用。啥都没。为什么你们的 1080P 看上去更糟糕  
-> 为什么要选择 DECAY 的片源？他是动画发布届最渣的压制没有之一，为什么！？  
-> 评分:0.5。停止[哔——]的 warp 锐化
+> > 看这里看这里看这里，在 Elysium 字幕组，我们非常自豪地提供各个方面的最佳产品  
+> > 当然通常情况下，小体积意味着低质量。但是，在我们这里，一切皆有可能  
+> > 放你丫的 P  
+> > 你懂的，我不会再说“都 2011 念了谁还在乎文件大小啊”。但是真的，如果你在乎做甚鸟 1080P？做同样大小的 720P 吧，它怎么都比你那坨 1080P 看着舒服  
+> > 例如——刀语最后几话（4/5），我啥 deband 滤镜都没用。啥都没。为什么你们的 1080P 看上去更糟糕  
+> > 为什么要选择 DECAY 的片源？他是动画发布届最渣的压制没有之一，为什么！？  
+> > 评分:0.5。停止[哔——]的 warp 锐化
 
   
 国外组我知道的就这么多，基本都是我经常收的或者眼熟的，还有部分道听途说的。个人日常收片，中文压制组和俄罗斯组基本能满足我的需求，完全没有动力再去找别的组。实际上中文压制组和俄罗斯组应该就是日本动画这块全球最大的两拨压制势力了，其他国家的规模都比这二者小得多，优秀者也少得多。
